# erp-report-engine

./: .coverage  .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  README.tr.md  SECURITY.md  config.example.yaml  pyproject.toml  requirements.txt  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  profile_request.md
.github/workflows/: ci.yml  codeql.yml  publish-mcp.yml  publish.yml
automation/: POWER-AUTOMATE.md  erp-report-flow.definition.json  request-schema.json
commands/: erp-schema.md  trust-benchmark.md
demo/: build_demo_db.py
docs/: case-study.html  comparison.html  dashboard.html  generate_model_json.py  generate_playground.py  generate_trust_page.py  index.html  model.json  playground.html  sample-report.html  trust.html
erp_report_engine/: __init__.py  attack_corpus.py  baseline_guards.py  cli.py  config.py  connect.py  contracts.py  delivery.py  demo_builder.py  errors.py  export_powerbi.py  extract.py  guard.py  insights.py  kpi.py  logsetup.py  mcp_server.py  narrate.py  render.py  render_dashboard.py  runner.py  semantic.py  spc.py  state.py  week_calendar.py
erp_report_engine/profiles/: __init__.py  generic.yaml  logo_tiger.yaml  mikro.yaml  netsis.yaml
powerbi/: ERP Command Center.pbip  README.md  README.tr.md
powerbi/ERP Command Center.Report/: .platform  definition.pbir
powerbi/ERP Command Center.Report/definition/: report.json
powerbi/ERP Command Center.SemanticModel/: .platform  definition.pbism
powerbi/ERP Command Center.SemanticModel/.pbi/: editorSettings.json
powerbi/ERP Command Center.SemanticModel/definition/: database.tmdl  model.tmdl  (+2 more)
powerbi/data/: dim_item.csv  dim_week.csv  fact_order_lines.csv  fact_orders.csv  fact_receivables.csv  meta_audit_trail.csv  meta_data_quality.csv  meta_reconciliation.csv  meta_run_info.csv
powerbi/preview/: README.md
powerbi/tools/: generate_report_pages.py
profiles/: generic.yaml
skills/: README.md
skills/erp-safe-query/: SKILL.md
skills/explain-kpi-move/: SKILL.md
skills/write-erp-profile/: SKILL.md
tests/: test_baseline_guards.py  test_calendar_properties.py  test_cli.py  test_config.py  test_contracts.py  test_dashboard.py  test_delivery.py  test_engine.py  test_guard.py  test_guard_fuzz.py  test_honesty.py  test_kpi.py  test_mcp.py  test_narrate.py  test_powerbi.py  test_render.py  test_runner.py  test_schema.py  test_spc.py
(+55 files in other folders)
